--- a/.travis.yml
+++ b/.travis.yml
@@ -14,4 +14,4 @@ after_success: |
   zola build &&
   sudo pip install ghp-import &&
   ghp-import -n public &&
-  git push -fq https://${GH_TOKEN}@github.com/${TRAVIS_REPO_SLUG}.git master
+  git push -fq https://${GH_TOKEN}@github.com/${TRAVIS_REPO_SLUG}.git HEAD:master
