--- a/.travis.yml
+++ b/.travis.yml
@@ -9,9 +9,9 @@ script:
 # If you are using a different folder than `public` for the output directory, you will
 # need to change the `zola` command and the `ghp-import` path
 after_success: |
-  [ $TRAVIS_BRANCH = master ] &&
+  [ $TRAVIS_BRANCH = zola ] &&
   [ $TRAVIS_PULL_REQUEST = false ] &&
   zola build &&
   sudo pip install ghp-import &&
-  ghp-import -n -p -f -b master public &&
+  ghp-import -n -p -f --branch=master public &&
   git push -fq https://ramonimbao:${GH_TOKEN}@github.com/@github.com/ramonimbao/ramonimbao.github.io.git HEAD:master
