--- a/.travis.yml
+++ b/.travis.yml
@@ -12,6 +12,7 @@ after_success: |
   [ $TRAVIS_BRANCH = zola ] &&
   [ $TRAVIS_PULL_REQUEST = false ] &&
   zola build &&
-  sudo pip install ghp-import &&
-  ghp-import -n -p -f --branch=master public &&
-  git push -fq https://ramonimbao:${GH_TOKEN}@github.com/@github.com/ramonimbao/ramonimbao.github.io.git HEAD:master
+  cd public &&
+  git add * &&
+  git commit --allow-empty -m "Update pages" &&
+  git push -fq https://${GH_TOKEN}@github.com/${TRAVIS_REPO_SLUG}.git master
