--- a/.travis.yml
+++ b/.travis.yml
@@ -13,6 +13,7 @@ after_success: |
   [ $TRAVIS_PULL_REQUEST = false ] &&
   zola build &&
   cd public &&
+  git init &&
   git add * &&
   git commit --allow-empty -m "Update pages" &&
   git push -fq https://${GH_TOKEN}@github.com/${TRAVIS_REPO_SLUG}.git master
