--- a/config.toml
+++ b/config.toml
@@ -18,4 +18,4 @@ theme = "feather"
 # Put all your custom variables here
 feather_header_image = "/gray.png"
 
-feather_disqus_code = "<div id='disqus_thread'></div><script>var disqus_config = function () { this.page.url = {{ current_url }}; this.page.identifier = {{ current_url }}; };(function() { var d = document, s = d.createElement('script'); s.src = 'https://ramonimbao.disqus.com/embed.js'; s.setAttribute('data-timestamp', +new Date()); (d.head || d.body).appendChild(s); })();</script><noscript>Please enable JavaScript to view the <a href='https://disqus.com/?ref_noscript' rel='nofollow'>comments powered by Disqus.</a></noscript>"
+feather_disqus_code = "<div id='disqus_thread'></div><script>var disqus_config = function () { this.page.url = {{ page.current_url }}; this.page.identifier = {{ page.current_url }}; };(function() { var d = document, s = d.createElement('script'); s.src = 'https://ramonimbao.disqus.com/embed.js'; s.setAttribute('data-timestamp', +new Date()); (d.head || d.body).appendChild(s); })();</script><noscript>Please enable JavaScript to view the <a href='https://disqus.com/?ref_noscript' rel='nofollow'>comments powered by Disqus.</a></noscript>"
