--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "themes/themes/even"]
 	path = themes/themes/even
 	url = https://github.com/ramonimbao/even
+[submodule "themes/even"]
+	path = themes/even
+	url = https://github.com/ramonimbao/even
