--- a/config.toml
+++ b/config.toml
@@ -25,5 +25,6 @@ even_title = "Ramon Imbao's Blog"
 even_menu = [
     {url = "$BASE_URL", name = "Home"},
     {url = "$BASE_URL/tags", name = "Tags"},
-    {url = "$BASE_URL/3d", name = "3D"}
+    {url = "$BASE_URL/3d", name = "3D"},
+    {url = "$BASE_URL/cv", name = "CV"}
 ]
