--- a/config.toml
+++ b/config.toml
@@ -1,5 +1,5 @@
 # The URL the site will be built for
-base_url = "https://ramonimbao.github.io/"
+base_url = "https://rmi-kb.com/"
 
 title = "Ramon Imbao's Blog"
 
