--- a/.travis.yml
+++ b/.travis.yml
@@ -14,6 +14,7 @@ after_success: |
   zola build &&
   cd public &&
   git init &&
+  echo "rmi-kb.com" > CNAME &&
   git add * &&
   git commit --allow-empty -m "Update pages" &&
   git push -fq https://${GH_TOKEN}@github.com/${TRAVIS_REPO_SLUG}.git master
